k8s/workloads/memos/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  labels:
    app: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: memos
          image: ghcr.io/usememos/memos:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: memos
spec:
  ports:
    - port: 80
      targetPort: 5230
  selector:
    app: memos
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos
  annotations:
    argocd.argoproj.io/sync-options: Ignore=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`memos.rvserver.online`)
      kind: Rule
      services:
        - name: memos
          port: 80
